Fix touch screen dragging on firefox (issue on Chrome still exists)

--- a/fun.css
+++ b/fun.css
@@ -2,7 +2,7 @@ html {
 	width:100%; height:100%;
 }
 body {
-	width:100%; height:100%;
+	width:100%; height:100%; overflow:hidden;
 }
 svg {
     transform-origin: 0px 0px 0px;
